[tool.poetry]
name = "chachacha"
description = "Chachacha changes changelogs"
version = "0.1.5"
authors = ["Alessandro Ogier <alessandro.ogier@gmail.com>"]
readme = "README.md"
license = "BSD"
repository = "https://github.com/aogier/chachacha"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.scripts]
chachacha = "chachacha.main:main"

[tool.poetry.dependencies]
python = "^3.7"
keepachangelog = "^0.3.1"
click = "^7.0"
jinja2 = "^2.11.1"
poetry-version = "^0.1.5"
semver = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.19.0"
mypy = "^0.761"
black = "^19.10b0"
autoflake = "^1.3.1"
isort = "^4.3.21"
pytest-cov = "^2.8.1"
wheel = "^0.34.2"
twine = "^3.1.1"
pyinstaller = "^3.6"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
