[tool.poetry]
name = "chachacha"
description = "Chachacha changes changelogs"
version = "0.2.3"
authors = ["Alessandro Ogier <alessandro.ogier@gmail.com>"]
readme = "README.md"
license = "BSD"
repository = "https://github.com/aogier/chachacha"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.scripts]
chachacha = "chachacha.main:main"

[tool.poetry.dependencies]
python = "^3.7"
keepachangelog = "^0.3.1"
click = "^8.1.0"
jinja2 = "^3.1.0"
semver = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
mypy = "^1.1"
black = "^23"
autoflake = "^2.0"
pytest-cov = "^4"
pyinstaller = "^4.1"
pylint = "^2.5.3"
codecov = "^2.1.12"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
